--- a/1_drums/style.css
+++ b/1_drums/style.css
@@ -1,3 +1,13 @@
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: palevioletred;
+}
+
 .keys{
   display: flex;
   flex-direction: row;
@@ -47,3 +57,4 @@ kbd {
 .focused{
   color: rgb(0, 255, 191);
 }
+
